[package]
name = "louvain"
version = "0.1.0"
authors = ["Juan Morales <crispamares@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"

serde = "1"
serde_json = "1"
serde_derive = "1"

rand = "0.5"
petgraph = "0.4"
# slotmap = {version = "0.4", features = ["unstable"]}
slotmap = {version = "0.4"}

[dependencies.clap]
version = "2.33"
default-features = false
features = [ "suggestions" ]